Added version string and cleaned up port finding code a bit